利用session保存登录态 利用th：if控制内容显示

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+github.client.id=6a312e03edabef8a3323
+github.client.secret=3cccdaca866020e18d5a2ec632955a44fe89418d
+github.redirect.uri=http://localhost:8080/callback
