--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 github.client.id=6a312e03edabef8a3323
 github.client.secret=3cccdaca866020e18d5a2ec632955a44fe89418d
 github.redirect.uri=http://localhost:8080/callback
+
+spring.datasource.url=jdbc:h2:E:/My-Java/HelloWorld/database/database
+spring.datasource.username=admin
+spring.datasource.password=123456
+spring.datasource.driverClassName=org.h2.Driver
