--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,17 @@
     </dependencies>
 
     <build>
+<!--        为解决Could not resolve placeholder '' in value "${}"而添加-->
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+<!--                <includes>-->
+<!--                    <include>application.properties</include>-->
+<!--                </includes>-->
+            </resource>
+        </resources>
+<!--        为解决Could not resolve placeholder '' in value "${}"而添加-->
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -96,15 +107,16 @@
                     <user>admin</user>
                     <password>123456</password>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>com.h2database</groupId>
-                        <artifactId>h2</artifactId>
-                        <version>1.4.200</version>
-                    </dependency>
-                </dependencies>
+<!--                <dependencies>-->
+<!--                    <dependency>-->
+<!--                        <groupId>com.h2database</groupId>-->
+<!--                        <artifactId>h2</artifactId>-->
+<!--                        <version>1.4.200</version>-->
+<!--                    </dependency>-->
+<!--                </dependencies>-->
             </plugin>
         </plugins>
     </build>
+
 
 </project>
