--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.url=jdbc:h2:E:/My-Java/HelloWorld/database/database
 spring.datasource.username=admin
 spring.datasource.password=123456
 spring.datasource.driverClassName=org.h2.Driver
+
+#实现数据库带下划线字段到Model中驼峰命名属性的转换
+mybatis.configuration.map-underscore-to-camel-case=true
