--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.driverClassName=org.h2.Driver
 
 #实现数据库带下划线字段到Model中驼峰命名属性的转换
 mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=com.example.helloworld.demo.Model
+mybatis.mapper-locations=classpath:mapper/*.xml
