--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.driverClassName=org.h2.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.example.helloworld.demo.Model
 mybatis.mapper-locations=classpath:mapper/*.xml
+
+#server.port=8887
